@@ -23,8 +23,6 @@ Octave has a limited number of functions for managing sets of data, where a
 set is defined as a collection of unique elements.  In Octave a set is
 represented as a vector of numbers.
 
-@DOCSTRING(create_set)
-
 @DOCSTRING(unique)
 
 @menu
